--- a/package.json
+++ b/package.json
@@ -2,16 +2,31 @@
   "name": "wip-front",
   "version": "0.1.0",
   "private": true,
+  "requires": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "daisyui": "^2.19.0",
+    "date-fns": "^2.29.2",
+    "dayjs": "^1.11.5",
+    "helpers": "0.0.6",
+    "loadsh": "0.0.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +65,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.5"
   }
