--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
     "helpers": "0.0.6",
+    "html-react-parser": "^3.0.15",
     "loadsh": "0.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
