--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
     "helpers": "0.0.6",
+    "history": "^5.3.0",
     "html-react-parser": "^3.0.15",
     "loadsh": "0.0.4",
     "lodash": "^4.17.21",
