--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helpers": "0.0.6",
     "history": "^5.3.0",
     "html-react-parser": "^3.0.15",
+    "js-file-download": "^0.4.12",
     "loadsh": "0.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
